# terraducktel

./: .checkov.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  index.html
docs/: API.md  (+3 more)
services/api/: Dockerfile  docker-entrypoint.sh  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_init_config_and_state_lock.py  002_workspaces_runs.py  003_rbac.py  004_audit_log.py  005_drift.py  006_aws_accounts.py  007_run_steps.py  008_rebrand_salt.py  009_aws_profile_name.py  010_run_plan_json.py  011_tfplan_blob.py  012_branch_webhook.py  013_run_reviewer.py  014_run_jobs_queue.py  015_audit_hash_chain.py  016_audit_chain_link_only.py  017_workspace_variables.py  018_business_units.py  019_workspace_state_key.py  020_user_display_name.py  021_run_auto_approve.py  022_workspace_path_status.py  023_ws_state_aws_account.py  024_user_presence.py  025_azure_subscriptions.py  026_workspace_azure_subscription.py  027_changelog_entries.py  028_workspace_kind.py  029_k8s_clusters.py  030_cluster_aws_account.py  031_global_vars_bu_scope.py  (+9 more)
services/api/app/: db.py  main.py  observability.py
services/api/policies/: deny_destructive.rego
services/api/scripts/: restamp_audit_chain.py  seed_dev_users.py  seed_policies.py
services/api/tests/: conftest.py  test_api_keys.py  test_api_rbac.py  test_approval_flow.py  test_audit_chain.py  test_aws_accounts.py  test_aws_accounts_router.py  test_azure_subscriptions.py  test_azure_subscriptions_router.py  test_bu_object_isolation.py  test_bu_role_enforcement.py  test_clusters.py  test_compose_healthchecks.py  test_config.py  test_config_service.py  test_core_services.py  test_cred_services.py  test_drift_detection.py  test_encryption_key_fail_loud.py  test_environments.py  test_executor.py  test_executor_contract.py  test_executor_launch.py  test_executor_misconfig.py  test_executor_service.py  test_fsm_invariants.py  test_gcp_projects_router.py  test_global_vars_bu_isolation.py  test_health.py  test_integration_e2e.py  test_inventory.py  test_notification_leaf_path.py  test_notification_service.py  test_observability.py  test_oidc.py  test_patch_run_notification_resilience.py  test_phase3_hardening.py  test_policies.py  test_presence.py  test_pure_services.py  (+18 more)
(+221 files in other folders)
